<resources>
    <string name="EMA">EMA</string>
    <string name="FAQ">FAQ</string>
    <string name="IAIR_AWARDS">IAIR AWARDS</string>
    <string name="Indices">Indices</string>
    <string name="MA">MA</string>
    <string name="SERVER_LOCALE">en_US</string>
    <string name="SERVER_LOCALE_TEST">en_US</string>
    <string name="SMA">SMA</string>
    <string name="SSMA">SSMA</string>
    <string name="WMA">WMA</string>
    <string name="_1">1</string>
    <string name="_12_questions">12 questions, 12 seconds per answer</string>
    <string name="_18_years">18 years</string>
    <string name="_2">2</string>
    <string name="_256_bit">256 bit</string>
    <string name="_2_lives_2_mistakes">Max 2 lives = max 2 mistakes</string>
    <string name="_3_answers_only_1_is_correct">3 answers, only 1 is correct</string>
    <string name="_4_week_max_min_braking">4–week max / min breaking</string>
    <string name="_52_week_max_min_braking">52–week max / min breaking</string>
    <string name="__18_years">18 years</string>
    <string name="__24_7_support">24/7 Support</string>
    <string name="__2_step_authentication">Two–Step Authentication and Touch ID, negative balance protection. 20 million people across the world have already joined us.</string>
    <string name="__2step_verification">2–Step Verification</string>
    <string name="a_certain_amount_of_tokens_will_be_distributed">A certain amount of tokens will be distributed among users trading Crypto with commission at the end of each week. The more you trade, the more tokens you will receive.</string>
    <string name="a_color_copy_of_any_identity">A color copy of any identity documents: passport or driving license</string>
    <string name="a_color_copy_of_your_passport">A color copy of your passport</string>
    <string name="a_copy_of_the_utility_services_payment_receipt_or_bank_statement">A copy of the utility services payment receipt or bank statement</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_cashback">About cashback</string>
    <string name="about_company">About Us</string>
    <string name="about_us">About Us</string>
    <string name="acceleration">Acceleration</string>
    <string name="acceleration_max">Acceleration max</string>
    <string name="access_to_high_risk_options_instruments">Access to High–risk Options instruments</string>
    <string name="access_to_higher_leverages_n1">Access to higher leverages (up to x%s)</string>
    <string name="account_category">Account category</string>
    <string name="account_currency">Account currency</string>
    <string name="account_opening">Account opening</string>
    <string name="account_removal_requested">Account removal requested</string>
    <string name="account_security">Account Security</string>
    <string name="account_type">Account type</string>
    <string name="account_verification">Account verification</string>
    <string name="account_verification_2">Account Verification</string>
    <string name="action_required">Action required</string>
    <string name="action_restricted">Action restricted</string>
    <string name="active">Asset</string>
    <string name="active_is_closed">Trade session for given asset is closed</string>
    <string name="active_sessions">Active sessions</string>
    <string name="active_tools">Active tools</string>
    <string name="add_new_document">Add new document</string>
    <string name="add_photos">Add photos</string>
    <string name="add_real_balance">Add real balance</string>
    <string name="address">Address</string>
    <string name="address_copied">Address copied</string>
    <string name="adx_abbr">ADX</string>
    <string name="agree">Agree</string>
    <string name="all">All</string>
    <string name="all_assets">All Assets</string>
    <string name="all_balance">All balance</string>
    <string name="all_details">All details</string>
    <string name="all_games">All games</string>
    <string name="all_indicators">All indicators</string>
    <string name="all_instruments">All instruments</string>
    <string name="all_profit_can_be_fast_withdrawn">All profit can be withdrawn</string>
    <string name="all_signals">All price movements</string>
    <string name="all_the_available_platform_instrument">All available instruments</string>
    <string name="all_time">All time</string>
    <string name="all_transactions_secured_by_the_blockchain">All transactions are secured by the blockchain system</string>
    <string name="all_world">All the world</string>
    <string name="alligator">Alligator</string>
    <string name="alligator_jaws_desc">Jaws is the Balance Line for the timeframe that was used to build the chart (13–period Smoothed Moving Average, moved into the future by 8 bars)</string>
    <string name="alligator_lips_desc">Lips is the Balance Line for the value timeframe, one more level lower (5–period Smoothed Moving Average, moved by 3 bars into the future)</string>
    <string name="alligator_teeth_desc">Teeth is the Balance Line for the value timeframe of one level lower (8–period Smoothed Moving Average, moved by 5 bars into the future)</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_</string>
    <string name="aml_policy">AML policy</string>
    <string name="aml_policy_link_n1">https://iqoption.com/%sterms-and-conditions/aml-kyc-policy</string>
    <string name="amount">Amount</string>
    <string name="amount_cannot_exeed">The amount of withdrawal to a bank card cannot exceed the amount of total deposits with this card</string>
    <string name="amount_is_less_than_min_amount">The minimum amount of deposit %s</string>
    <string name="amount_is_more_than_max_amount">The maximum amount of deposit %s</string>
    <string name="amount_of_tokens_scheduled">Amount of tokens scheduled for the release this week.</string>
    <string name="amount_to_be_invested">Amount to be invested</string>
    <string name="and_become_a_trader">and become a real trader</string>
    <string name="and_finish_your_verification_procedure">And finish your verification procedure</string>
    <string name="and_n1_more">and %s more</string>
    <string name="and_n_more">&amp; %d more</string>
    <string name="any_questions_feel_free_to_ask_and_we_ll">Any questions? Feel free to ask and we\'ll answer you quickly!</string>
    <string name="app_name">IQOptionX</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationId">355943598250539</string>
    <string name="application_declined">Application is declined</string>
    <string name="application_to_pro">Application to PRO</string>
    <string name="apply">Apply</string>
    <string name="apply_bonus">Apply bonus</string>
    <string name="apply_indicators_to_all_title">Apply indicators to all assets</string>
    <string name="apply_now">Apply now</string>
    <string name="apply_to">Apply to</string>
    <string name="approval_processing">Approval processing</string>
    <string name="approval_required">Approval required</string>
    <string name="assets">Asset</string>
    <string name="balance">Balance</string>
    <string name="basic">General</string>
    <string name="binary_options">Binary options</string>
    <string name="buy_in_one_click">Buy in one click (Option)</string>
    <string name="date">Date</string>
    <string name="date_and_time">Date and time</string>
    <string name="expiration_panel">Expiration panel</string>
    <string name="forex_and_stocks">Forex &amp; Stocks</string>
    <string name="gap">Gap</string>
    <string name="in_app_notifications">In–app notifications</string>
    <string name="instrument_type">Instrument type</string>
    <string name="investment">Investment</string>
    <string name="investment_amount">Investment amount</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="latest_movements">Latest movements</string>
    <string name="level_of_expiration">Level of expiration</string>
    <string name="month_3">3 Months</string>
    <string name="never_traded">Never traded</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="operation_type">Op.\10type</string>
    <string name="profit">Profit</string>
    <string name="purchase_settings">Purchase settings</string>
    <string name="push_notifications">Push notifications</string>
    <string name="search">Search</string>
    <string name="sell_with_confirmation_forex">Sell with confirmation (Forex)</string>
    <string name="share_my_live_deals">Share my live deals</string>
    <string name="sharp_jump_drop">Sharp jump</string>
    <string name="show_hi_low_on_chart">Show high/low on chart</string>
    <string name="signals">Price movements</string>
    <string name="sound">Sound</string>
    <string name="status">Status</string>
    <string name="strike">Strike</string>
    <string name="today">Today</string>
    <string name="top_asset">Top asset</string>
    <string name="traderoom_settings">Traderoom Settings</string>
    <string name="trading_history">Trading History</string>
    <string name="trading_settings">Trading settings</string>
    <string name="trailing_stop">Trailing stop</string>
    <string name="use_all_balance_to_keep_position_open">Use balance to keep position open</string>
    <string name="value">Price</string>
    <string name="what_is_your_trading_experience">What is your trading experience?</string>
    <string name="yesterday">Yesterday</string>
    <string name="you_get_access_to">You get access to:</string>
    <string name="you_get_access_to_item_1">real account which allows you to trade with real funds</string>
    <string name="you_get_access_to_item_2">practice account with virtual funds</string>
</resources>