<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:tag="layout/fragment_traderoom_settings_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/dp48">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/backButton" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_back" style="@style/IQActionButton"/>
        <TextView android:textSize="@dimen/sp20" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp96" android:text="@string/trading_settings" android:fontFamily="sans-serif-medium"/>
    </FrameLayout>
    <ScrollView android:id="@a/contentScroll" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@a/contentLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp80" android:layout_marginTop="@dimen/dp12" android:layout_marginRight="@dimen/dp80" android:layout_marginBottom="@dimen/dp24">
            <LinearLayout android:orientation="vertical" android:layout_marginBottom="@dimen/dp28" style="@style/SettingGroup">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/traderoom_settings" style="@style/SettingGroupTitle"/>
                    <com.iqoption.view.SettingItemView android:id="@a/expPanelSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/expiration_panel" style="@style/SettingItem"/>
                </LinearLayout>
                <com.iqoption.view.SettingItemView android:id="@a/tradersMoodSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@i/traders_mood" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/liveDealsSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@i/live_deals" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/shareMyLiveDealsSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/share_my_live_deals" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/soundSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/sound" style="@style/SettingItem"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" style="@style/SettingGroup">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:text="@i/chart_settings" style="@style/SettingGroupTitle"/>
                    <com.iqoption.view.SettingItemView android:id="@a/investmentAmountSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/investment_amount" style="@style/SettingItem"/>
                    <com.iqoption.view.SettingItemView android:id="@a/hiLowChartSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/show_hi_low_on_chart" style="@style/SettingItem"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@a/purchaseGroup" style="@style/SettingGroup">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/purchase_settings" style="@style/SettingGroupTitle"/>
                    <com.iqoption.view.SettingItemView android:id="@a/buyInClickClickSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/buy_in_one_click" style="@style/SettingItem"/>
                </LinearLayout>
                <com.iqoption.view.SettingItemView android:id="@a/sellWithConfirmationForexClickSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/sell_with_confirmation_forex" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/marginAddOnSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/use_all_balance_to_keep_position_open" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/trailingStopSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/trailing_stop" style="@style/SettingItem"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@a/inAppNotifications" style="@style/SettingGroup">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/in_app_notifications" style="@style/SettingGroupTitle"/>
                    <com.iqoption.view.SettingItemView android:id="@a/sharpJumpSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/sharp_jump_drop" style="@style/SettingItem"/>
                </LinearLayout>
                <com.iqoption.view.SettingItemView android:id="@a/latestMovementsSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/latest_movements" style="@style/SettingItem"/>
                <com.iqoption.view.SettingItemView android:id="@a/topAssetSetting" android:layout_width="match_parent" android:layout_height="wrap_content" app:label="@string/top_asset" style="@style/SettingItem"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@a/pushSettings" android:showDividers="none" style="@style/SettingGroup">
                <TextView android:text="@string/push_notifications" style="@style/SettingGroupTitle"/>
                <ProgressBar android:layout_gravity="center" android:id="@a/progressLoadPushSetting" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <LinearLayout android:orientation="vertical" android:id="@a/pushSettingsContainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@drawable/settings_divider" android:showDividers="middle"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@a/openLicenses" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:layout_marginBottom="@dimen/dp28">
                <TextView android:textSize="@dimen/sp16" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:background="?attr/selectableItemBackground" android:paddingLeft="@dimen/dp16" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/open_source_licenses"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
