<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:tag="layout/dialog_closed_deals_header_list_do_0" android:paddingLeft="@dimen/dp20" android:paddingTop="@dimen/dp8" android:paddingRight="@dimen/dp20" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.iqoption.view.RobotoTextView android:textSize="@dimen/sp10" android:textColor="@color/grey_blur_50" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/strike" android:maxLines="1" android:layout_weight="1" android:textAllCaps="true"/>
    <com.iqoption.view.RobotoTextView android:textSize="@dimen/sp10" android:textColor="@color/grey_blur_50" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/investment" android:maxLines="1" android:layout_weight="1" android:textAllCaps="true"/>
    <com.iqoption.view.RobotoTextView android:textSize="@dimen/sp10" android:textColor="@color/grey_blur_50" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/profit" android:maxLines="1" android:layout_weight="1" android:textAllCaps="true"/>
    <com.iqoption.view.RobotoTextView android:textSize="@dimen/sp10" android:textColor="@color/grey_blur_50" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/status" android:maxLines="1" android:layout_weight="1" android:textAllCaps="true"/>
</LinearLayout>
