<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@a/options_container" android:tag="layout/price_movements_filter_options_0" android:background="@drawable/bg_options_window" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/sp14" android:textColor="@color/grey_blur" android:paddingTop="@dimen/dp10" android:paddingBottom="@dimen/dp10" android:layout_width="match_parent" android:layout_height="@dimen/dp36" android:text="@string/signals" android:paddingStart="@dimen/dp12" android:paddingEnd="@dimen/dp12"/>
    <TextView android:textSize="@dimen/sp14" android:textColor="@color/white" android:id="@a/all" android:background="@drawable/bg_options_window_item" android:paddingTop="@dimen/dp10" android:paddingBottom="@dimen/dp10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/all_signals" android:paddingStart="@dimen/dp12" android:paddingEnd="@dimen/dp12"/>
    <TextView android:textSize="@dimen/sp14" android:textColor="@color/white" android:id="@a/gap" android:background="@drawable/bg_options_window_item" android:paddingTop="@dimen/dp10" android:paddingBottom="@dimen/dp10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gap" android:paddingStart="@dimen/dp12" android:paddingEnd="@dimen/dp12"/>
    <TextView android:textSize="@dimen/sp14" android:textColor="@color/white" android:id="@a/sharpJump" android:background="@drawable/bg_options_window_item" android:paddingTop="@dimen/dp10" android:paddingBottom="@dimen/dp10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sharp_jump_drop" android:paddingStart="@dimen/dp12" android:paddingEnd="@dimen/dp12"/>
</LinearLayout>
